--- a/index.html
+++ b/index.html
@@ -377,30 +377,41 @@
         </div>
     </div>
 </section>
-    <!-- Team -->
-        <section class="page-section bg-light" id="about">
-            <div class="container">
-                <div class="text-center">
-                    <h2 class="section-heading text-uppercase">About</h2>
-                    <h3 class="section-subheading text-muted">Creative Visualiser & Communications Consultant</h3>
-                </div>
-                <div class="row align-items-start"> <!-- Changed from align-items-center to align-items-start -->
-                    <div class="col-lg-4">
-                        <div class="team-member">
-                            <img class="mx-auto rounded-circle" src="assets/img/team/rasmus-volkov-profile-image.png" alt="Rasmus Volkov" />
-                            <h4>Rasmus Volkov</h4>
-                            <p class="text-muted">3D Visualiser, Communications Consultant, Marketer</p>
-                            <a class="btn btn-dark btn-social mx-2" href="https://www.linkedin.com/in/rasmusvolkov" aria-label="Rasmus Volkov LinkedIn Profile" target="_blank" rel="noopener noreferrer"><i class="fab fa-linkedin-in"></i></a>
-                        </div>
+<!-- Team -->
+<section class="page-section bg-light" id="about">
+    <div class="container">
+        <div class="text-center">
+            <h2 class="section-heading text-uppercase">About</h2>
+            <h3 class="section-subheading text-muted">Creative Visualiser & Communications Consultant</h3>
+        </div>
+        <div class="row align-items-start">
+            <div class="col-lg-4">
+                <div class="team-member">
+                    <img class="mx-auto rounded-circle" src="assets/img/team/rasmus-volkov-profile-image.png" alt="Rasmus Volkov" />
+                    <h4>Rasmus Volkov</h4>
+                    <p class="text-muted">3D Visualiser, Communications Consultant, Marketer</p>
+                    <div class="location">
+                        <i class="fa-solid fa-location-dot"></i>
+                        <span class="text-muted">Tallinn, Estonia</span>
                     </div>
-                    <div class="col-lg-8">
-                        <div class="text-left">
-                            <p class="large text-muted">With over 10 years in marketing and advertising, I’ve always had a passion for the creative aspects of my work. Currently, as a Communications Consultant for tech companies, I've identified a significant need for high-quality videos and images that can elevate advertising efforts. In my experience, especially within the startup sector, effectively explaining complex technology is essential. High-quality explainer videos can simplify intricate concepts for broader audiences, making them more accessible to journalists and consumers alike.</p>
-                        </div>
-                    </div>
+                    <a class="btn btn-dark btn-social mx-2" href="https://www.linkedin.com/in/rasmusvolkov" aria-label="Rasmus Volkov LinkedIn Profile" target="_blank" rel="noopener noreferrer">
+                        <i class="fab fa-linkedin-in"></i>
+                    </a>
                 </div>
             </div>
-        </section>
+            <div class="col-lg-8">
+                <div class="text-left">
+                    <p class="large text-muted">Your sales team’s best friend. With over a decade in marketing and advertising, I help companies get noticed—whether that’s on the global stage or right in front of the people who matter most.</p>
+                    <p class="large text-muted">By day, I’m a communications consultant for tech firms, translating complex tech jargon into clear, compelling narratives. By night, I’m a marketing freelancer and 3D artist, blending creativity and strategy to make sure ideas not only look good but resonate with the right audience.</p>
+                    <p class="large text-muted">I’ve seen too many great companies with amazing products fail to gain traction because their message gets lost in translation. My job is to make sure that doesn’t happen to you.</p>
+                    <p class="large text-muted">From running Etsy stores and creating paid ads for robotics companies to writing key messages and press releases for B2B fintech and developing go-to-market strategies for Web3 companies, I’ve worked across a wide spectrum. That range of experience means I can adapt to your unique challenges and give you the best shot at getting your message across in a way that sticks.</p>
+                    <p class="large text-muted"><strong>tl;dr:</strong> If you’ve got a product and want the world to know how awesome it is, I’m your guy.</p>
+                </div>
+            </div>
+        </div>
+    </div>
+</section>
+
         <!-- Footer-->
         <footer class="footer py-4">
             <div class="container">
