--- a/index.html
+++ b/index.html
@@ -6,8 +6,12 @@
         <meta name="description" content="" />
         <meta name="author" content="" />
         <title>Rasmus Volkov - 3D design</title>
-        <!-- Favicon-->
-        <link rel="icon" type="image/x-icon" href="assets/rv-favicon.ico" />
+<!-- Favicon -->
+<link rel="icon" type="image/x-icon" href="assets/rv-favicon.ico" />
+<link rel="icon" sizes="48x48" href="assets/rv-favicon.ico" />
+<link rel="icon" sizes="96x96" href="assets/rv-favicon.ico" />
+<link rel="icon" sizes="144x144" href="assets/rv-favicon.ico" />
+<link rel="icon" sizes="256x256" href="assets/rv-favicon.ico" />
         <!-- Font Awesome icons (free version)-->
         <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.3.0/css/all.min.css" rel="stylesheet">
         <!-- Google fonts-->
