--- a/index.html
+++ b/index.html
@@ -3,23 +3,23 @@
     <head>
         <meta charset="utf-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
-        <meta name="description" content="" />
+        <meta name="description" content="Product animations, images and tech explainers. Transforming nascent tech and complex ideas into captivating visuals, I help companies shine in the crowded market with over a decade of marketing and creative expertise." />
         <meta name="author" content="" />
-        <title>Rasmus Volkov - 3D design</title>
-<!-- Favicon -->
-<link rel="icon" type="image/x-icon" href="assets/rv-favicon.ico" />
-<link rel="icon" sizes="48x48" href="assets/rv-favicon.ico" />
-<link rel="icon" sizes="96x96" href="assets/rv-favicon.ico" />
-<link rel="icon" sizes="144x144" href="assets/rv-favicon.ico" />
-<link rel="icon" sizes="256x256" href="assets/rv-favicon.ico" />
-        <!-- Font Awesome icons (free version)-->
+        <title>Rasmus Volkov - 3D artist</title>
+    <!-- Favicon -->
+        <link rel="icon" type="image/x-icon" href="assets/rv-favicon.ico" />
+        <link rel="icon" sizes="48x48" href="assets/rv-favicon.ico" />
+        <link rel="icon" sizes="96x96" href="assets/rv-favicon.ico" />
+        <link rel="icon" sizes="144x144" href="assets/rv-favicon.ico" />
+        <link rel="icon" sizes="256x256" href="assets/rv-favicon.ico" />
+    <!-- Font Awesome icons (free version)-->
         <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.3.0/css/all.min.css" rel="stylesheet">
-        <!-- Google fonts-->
+    <!-- Google fonts-->
         <link href="https://fonts.googleapis.com/css?family=Montserrat:400,700" rel="stylesheet" type="text/css" />
         <link href="https://fonts.googleapis.com/css?family=Roboto+Slab:400,100,300,700" rel="stylesheet" type="text/css" />
-        <!-- Core theme CSS (includes Bootstrap)-->
+     <!-- Core theme CSS (includes Bootstrap)-->
         <link href="css/styles.css" rel="stylesheet" />
-    </head>    
+    </head>      
     <body id="page-top">
         <!-- Navigation-->
         <nav class="navbar navbar-expand-lg navbar-dark fixed-top" id="mainNav">
