--- a/index.html
+++ b/index.html
@@ -3,9 +3,14 @@
     <head>
         <meta charset="utf-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
-        <meta name="description" content="Product animations, images and tech explainers. Transforming nascent tech and complex ideas into captivating visuals, I help companies shine in the crowded market with over a decade of marketing and creative expertise." />
-        <meta name="author" content="" />
-        <title>Rasmus Volkov - 3D artist</title>
+        <meta name="description" content="Rasmus Volkov: 3D artist specializing in product animations, images, and tech explainers. With over a decade of marketing expertise, I help companies shine in crowded markets through captivating visuals and clear communication." />
+        <meta name="author" content="Rasmus Volkov" />
+        <meta property="og:title" content="Rasmus Volkov - 3D Artist & Communications Consultant" />
+        <meta property="og:description" content="Transforming complex ideas into captivating visuals. Helping companies shine through product animations, images, and tech explainers." />
+        <meta property="og:image" content="https://www.yourwebsite.com/assets/img/og-image.jpg" />
+        <meta property="og:url" content="https://www.rasmusvolkov.com" />
+        <meta name="twitter:card" content="summary_large_image" />
+        <title>Rasmus Volkov | Product Animations & Tech Explainers</title>
     <!-- Favicon -->
         <link rel="icon" type="image/x-icon" href="assets/rv-favicon.ico" />
         <link rel="icon" sizes="48x48" href="assets/rv-favicon.ico" />
@@ -19,12 +24,42 @@
         <link href="https://fonts.googleapis.com/css?family=Roboto+Slab:400,100,300,700" rel="stylesheet" type="text/css" />
      <!-- Core theme CSS (includes Bootstrap)-->
         <link href="css/styles.css" rel="stylesheet" />
+        <script type="application/ld+json">
+            {
+              "@context": "https://schema.org",
+              "@type": "Organization",
+              "name": "Rasmus Volkov",
+              "url": "https://rasmusvolkov.com",
+              "logo": "https://rasmusvolkov.com/assets/rv-favicon.ico",
+              "sameAs": [
+                "https://www.linkedin.com/in/rasmusvolkov"
+              ],
+              "service": [
+                {
+                  "@type": "Service",
+                  "serviceType": "3D Visualization",
+                  "description": "Creating high-quality 3D visualizations for products and services."
+                },
+                {
+                  "@type": "Service",
+                  "serviceType": "Communications Consulting",
+                  "description": "Helping tech firms translate complex ideas into clear narratives."
+                },
+                {
+                  "@type": "Service",
+                  "serviceType": "Marketing Freelancing",
+                  "description": "Offering marketing strategies and creative solutions for businesses."
+                }
+              ]
+            }
+            </script>
+            
     </head>      
     <body id="page-top">
         <!-- Navigation-->
         <nav class="navbar navbar-expand-lg navbar-dark fixed-top" id="mainNav">
             <div class="container">
-                <a class="navbar-brand" href="#page-top"><img src="assets/img/rasmus-volkov-logo.svg" alt="Rasmus Volkov Logo" class="logo" />                </a>
+                <a class="navbar-brand" href="#page-top"><img src="assets/img/rasmus-volkov-logo.svg" alt="Rasmus Volkov Logo" /></a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
                     Menu
                     <i class="fas fa-bars ms-1"></i>
@@ -391,7 +426,7 @@
         <div class="row align-items-start">
             <div class="col-lg-4">
                 <div class="team-member">
-                    <img class="mx-auto rounded-circle" src="assets/img/team/rasmus-volkov-profile-image.png" alt="Rasmus Volkov" />
+                    <img class="mx-auto rounded-circle" src="assets/img/team/rasmus-volkov-profile-image.png" alt="Rasmus Volkov - 3D Artist & Communications Consultant" />
                     <h4>Rasmus Volkov</h4>
                     <p class="text-muted">3D Visualiser, Communications Consultant, Marketer</p>
                     <div class="location">
@@ -408,8 +443,8 @@
                     <p class="large text-muted">Your sales team’s best friend. With over a decade in marketing and advertising, I help companies get noticed—whether that’s on the global stage or right in front of the people who matter most.</p>
                     <p class="large text-muted">By day, I’m a communications consultant for tech firms, translating complex tech jargon into clear, compelling narratives. By night, I’m a marketing freelancer and 3D artist, blending creativity and strategy to make sure ideas not only look good but resonate with the right audience.</p>
                     <p class="large text-muted">I’ve seen too many great companies with amazing products fail to gain traction because their message gets lost in translation. My job is to make sure that doesn’t happen to you.</p>
-                    <p class="large text-muted">From running Etsy stores and creating paid ads for robotics companies to writing key messages and press releases for B2B fintech and developing go-to-market strategies for Web3 companies, I’ve worked across a wide spectrum. That range of experience means I can adapt to your unique challenges and give you the best shot at getting your message across in a way that sticks.</p>
-                    <p class="large text-muted"><strong>tl;dr:</strong> If you’ve got a product and want the world to know how awesome it is, I’m your guy.</p>
+                    <p class="large text-muted">From running Etsy stores and creating paid ads for robotics companies to writing key messages and press releases for B2B fintechs and developing go-to-market strategies for Web3 companies, I’ve worked across a wide spectrum. That range of experience means I can adapt to your unique challenges and give you the best shot at getting your message across in a way that sticks.</p>
+                    <p class="large text-muted"><strong>tl;dr:</strong> If you’ve got a product, solution or a service and want the world to know how awesome it is, I’m your guy.</p>
                 </div>
             </div>
         </div>
@@ -420,7 +455,10 @@
         <footer class="footer py-4">
             <div class="container">
                 <div class="row align-items-center">
-                    <div class="col-lg-4 text-lg-start">Copyright &copy; Rasmus Volkov 2024</div>
+                    <div class="col-lg-4 text-lg-start">Copyright &copy; Rasmus Volkov 2023</div>
+                    <div class="col-lg-4 my-3 my-lg-0">
+                        <a class="btn btn-dark btn-social mx-2" href="https://www.linkedin.com/in/rasmusvolkov" aria-label="LinkedIn" target="_blank" rel="noopener noreferrer"><i class="fab fa-linkedin-in"></i></a>
+                    </div>
                     <div class="col-lg-4 text-lg-end">
                         <a class="link-dark text-decoration-none me-3" href="#!">Privacy Policy</a>
                         <a class="link-dark text-decoration-none" href="#!">Terms of Use</a>
