--- a/index.html
+++ b/index.html
@@ -37,18 +37,18 @@
               "service": [
                 {
                   "@type": "Service",
-                  "serviceType": "3D Visualization",
-                  "description": "Creating high-quality 3D visualizations for products and services."
+                  "serviceType": "Tech Explainers",
+                  "description": "3D animated videos simplifying complex tech with clear visuals and voiceovers, making your innovations easy to understand."
                 },
                 {
                   "@type": "Service",
-                  "serviceType": "Communications Consulting",
-                  "description": "Helping tech firms translate complex ideas into clear narratives."
+                  "serviceType": "Product Animation",
+                  "description": "Dynamic 3D animations showcasing your products in ways impossible with photos, perfect for ads, websites, and social media."
                 },
                 {
                   "@type": "Service",
-                  "serviceType": "Marketing Freelancing",
-                  "description": "Offering marketing strategies and creative solutions for businesses."
+                  "serviceType": "Product Images",
+                  "description": "High-quality 3D product images that make your brand stand out with polished, professional visuals for ads and e-commerce."
                 }
               ]
             }
@@ -441,7 +441,7 @@
             <div class="col-lg-8">
                 <div class="text-left">
                     <p class="large text-muted">Your sales team’s best friend. With over a decade in marketing and advertising, I help companies get noticed—whether that’s on the global stage or right in front of the people who matter most.</p>
-                    <p class="large text-muted">By day, I’m a communications consultant for tech firms, translating complex tech jargon into clear, compelling narratives. By night, I’m a marketing freelancer and 3D artist, blending creativity and strategy to make sure ideas not only look good but resonate with the right audience.</p>
+                    <p class="large text-muted">By day, I’m a communications consultant for tech companies, translating complex tech jargon into clear, compelling narratives. By night, I’m a marketing freelancer and 3D artist, blending creativity and strategy to make sure ideas not only look good but resonate with the right audience.</p>
                     <p class="large text-muted">I’ve seen too many great companies with amazing products fail to gain traction because their message gets lost in translation. My job is to make sure that doesn’t happen to you.</p>
                     <p class="large text-muted">From running Etsy stores and creating paid ads for robotics companies to writing key messages and press releases for B2B fintechs and developing go-to-market strategies for Web3 companies, I’ve worked across a wide spectrum. That range of experience means I can adapt to your unique challenges and give you the best shot at getting your message across in a way that sticks.</p>
                     <p class="large text-muted"><strong>tl;dr:</strong> If you’ve got a product, solution or a service and want the world to know how awesome it is, I’m your guy.</p>
@@ -455,7 +455,7 @@
         <footer class="footer py-4">
             <div class="container">
                 <div class="row align-items-center">
-                    <div class="col-lg-4 text-lg-start">Copyright &copy; Rasmus Volkov 2023</div>
+                    <div class="col-lg-4 text-lg-start">Copyright &copy; Rasmus Volkov 2024</div>
                     <div class="col-lg-4 my-3 my-lg-0">
                         <a class="btn btn-dark btn-social mx-2" href="https://www.linkedin.com/in/rasmusvolkov" aria-label="LinkedIn" target="_blank" rel="noopener noreferrer"><i class="fab fa-linkedin-in"></i></a>
                     </div>
