--- a/index.html
+++ b/index.html
@@ -34,26 +34,25 @@
               "sameAs": [
                 "https://www.linkedin.com/in/rasmusvolkov"
               ],
-              "service": [
+              "offers": [
                 {
                   "@type": "Service",
-                  "serviceType": "Tech Explainers",
+                  "name": "Tech Explainers",
                   "description": "3D animated videos simplifying complex tech with clear visuals and voiceovers, making your innovations easy to understand."
                 },
                 {
                   "@type": "Service",
-                  "serviceType": "Product Animation",
+                  "name": "Product Animation",
                   "description": "Dynamic 3D animations showcasing your products in ways impossible with photos, perfect for ads, websites, and social media."
                 },
                 {
                   "@type": "Service",
-                  "serviceType": "Product Images",
+                  "name": "Product Images",
                   "description": "High-quality 3D product images that make your brand stand out with polished, professional visuals for ads and e-commerce."
                 }
               ]
             }
-            </script>
-            
+            </script>            
     </head>      
     <body id="page-top">
         <!-- Navigation-->
