--- a/index.html
+++ b/index.html
@@ -1,6 +1,15 @@
 <!DOCTYPE html>
 <html lang="en">
     <head>
+        <!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-GZK2ZZG311"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-GZK2ZZG311');
+</script>
         <meta charset="utf-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
         <meta name="description" content="Rasmus Volkov: 3D artist specializing in product animations, images, and tech explainers. With over a decade of marketing expertise, I help companies shine in crowded markets through captivating visuals and clear communication." />
@@ -92,7 +101,7 @@
             <div class="container">
                 <div class="text-center">
                     <h2 class="section-heading text-uppercase">Services</h2>
-                    <h3 class="section-subheading text-muted">Get your product noticed</h3>
+                    <h3 class="section-subheading text-muted">Even the best ideas go unnoticed if they aren't communicated clearly and memorably</h3>
                 </div>
                 <div class="row text-center">
                     <div class="col-md-4">
