--- a/index.html
+++ b/index.html
@@ -58,8 +58,8 @@
               "Tuesday",
               "Wednesday",
               "Thursday",
-              "Friday"
-              "Saturday"
+              "Friday",
+              "Saturday",
               "Sunday"
             ],
             "opens": "08:00",
